# compiler-cw

./: .gitignore
cw1/src/: CoolLexer.g4
cw1/src/drivers/: LexerDriver.cpp
cw1/tests/lexer/: 002.simple.in  002.simple.out  026.strcom.out  042.whitespace.out  055.unprintables.out  076.comments.out  077.comments.out  078.comments.out  090.strings.out  092.strings.out  093.strings.out  098.keywords.out  100.keywords.out
cw1/tools/: CMakeLists.txt  build.sh  check  clean.sh  grade-lexer.sh
cw2/src/: CoolLexer.tokens  CoolParser.g4
cw2/src/drivers/: ParserDriver.cpp
cw2/tests/parser/: 001.class.out  002.fields.in  002.fields.out  003.methods.in  003.methods.out  004.methods.in  004.methods.out  005.member-invoc.in  005.member-invoc.out  006.method-invoc.in  006.method-invoc.out  007.ifthenelsefi.in  007.ifthenelsefi.out  008.whilelooppool.in  008.whilelooppool.out  009.composite.in  009.composite.out  010.letin.in  010.letin.out  011.letin.in  011.letin.out  012.letin.in  012.letin.out  013.caseofesac.in  013.caseofesac.out  014.caseofesac.in  014.caseofesac.out  015.inherits.in  015.inherits.out  016.letin.in  016.letin.out  017.letin.in  017.letin.out  018.precedence.in  018.precedence.out  019.precedence.in  019.precedence.out  020.precedence.in  020.precedence.out  021.precedence.in  (+95 more)
cw2/tools/: CMakeLists.txt  build-all.sh  build.sh  check  grade-parser.sh  test-parser.sh
cw3/include/: CoolLexer.h  CoolParser.h
cw3/include/semantics/: CoolSemantics.h
cw3/include/semantics/passes/: ClassChecker.h  ClassCollector.h  ExprCollector.h  FeatureCollector.h  MethodChecker.h  TypeChecker.h
cw3/include/semantics/typed-ast/: Arithmetic.h  Assignment.h  Attribute.h  BoolConstant.h  BooleanNegation.h  CaseOfEsac.h  Class.h  Classes.h  DynamicDispatch.h  EqualityComparison.h  Expr.h  IfThenElseFi.h  IntConstant.h  IntegerComparison.h  IntegerNegation.h  IsVoid.h  Method.h  MethodInvocation.h  Methods.h  NewObject.h  ObjectReference.h  Sequence.h  StaticDispatch.h  StringConstant.h  Vardecl.h  WhileLoopPool.h
cw3/src/: CoolLexer.g4
cw3/src/semantics/: CoolSemantics.cpp
cw3/src/semantics/passes/: ClassChecker.cpp  ClassCollector.cpp  ClassTreeChecker.cpp  ExprCollector.cpp  FeatureCollector.cpp  MethodChecker.cpp  TypeChecker.cpp
cw3/src/semantics/typed-ast/: Attributes.cpp  Classes.cpp
cw3/tests/semantics/: 002.inheritance-loop.in  002.inheritance-loop.out  003.inheritance-loop.in  004.inheritance-loop.in  004.inheritance-loop.out  005.inheritance-loop.in  006.inheritance-loop.in  006.inheritance-loop.out  007.undefined-parent.in  007.undefined-parent.out  008.undefined-parent.in  008.undefined-parent.out  009.inheritance.in  010.inheritance.in  011.methods.in  012.methods.in  012.methods.out  013.methods.in  014.methods.in  015.methods.in  015.methods.out  016.methods.in  016.methods.out  017.methods.in  018.methods.in  018.methods.out  019.methods.in  020.methods.in  020.methods.out  021.methods.in  021.methods.out  022.methods.in  022.methods.out  023.methods.in  023.methods.out  024.methods.in  025.methods.in  025.methods.out  026.methods.in  027.methods.in  (+216 more)
cw3/tools/: CMakeLists.txt  build-all.sh  build.sh  check  grade-semantics.sh  test-semantics.sh
cw4/include/: CoolParserBaseVisitor.h  CoolParserVisitor.h
cw4/include/codegen/: CodeEmitter.h  ConstantStorage.h  CoolCodegen.h  ExprEmitter.h  Mnemonic.h  ObjectModelTable.h
cw4/include/semantics/: CoolSemantics.h  typed-ast
cw4/src/: CoolParser.g4
cw4/src/codegen/: CodeEmitter.cpp  ConstantStorage.cpp  CoolCodegen.cpp  ExprEmitter.cpp  ObjectModelTable.cpp
cw4/src/drivers/: CodegenDriver.cpp
cw4/tests/codegen/: 001.hello_world.cl  001.hello_world.example.s  002.dynamic_dispatch.cl  003.sequence.cl  004.int_const.cl  005.let_in.cl  006.let_in.cl  007.assignment.cl  008.method_invoc.cl  009.method_invoc.cl  010.new.cl  011.dynamic_dispatch.cl  012.dynamic_dispatch.cl  013.attribute_init.cl  014.attribute_init.cl  015.ifthenelsefi.cl  016.ifthenelsefi.cl  017.isvoid.cl  018.isvoid.cl  019.isvoid.cl  020.isvoid.cl  021.string_init.cl  022.string_init.cl  023.isvoid.cl  024.ifthenelsefi.cl  025.ifthenelsefi.cl  026.ifthenelsefi.cl  027.ifthenelsefi.cl  028.ifthenelsefi.cl  029.ifthenelsefi.cl  030.ifthenelsefi.cl  031.ifthenelsefi.cl  032.whilelooppool.cl  033.integer_neg.cl  034.integer_neg.cl  035.arithmetic.cl  036.arithmetic.cl  037.whilelooppool.cl  038.bool_neg.cl  039.bool_neg.cl  (+65 more)
cw4/tools/: CMakeLists.txt  adapt-ccjson.sh  build-all.sh  check  grade-codegen.sh  run-asm.sh  test-codegen.sh
